--- a/deployment/helmcharts/fastapi/templates/deployment.yaml
+++ b/deployment/helmcharts/fastapi/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "fastapi.fullname" . }}
+  name: {{ include "fastapi.name" . }}
   labels:
     {{- include "fastapi.labels" . | nindent 4 }}
 spec:
@@ -35,6 +35,14 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          command:
+            - "uvicorn"
+            - "main:app"
+          args:
+            - "--host"
+            - "0.0.0.0"
+{{/*          command: [ "/bin/sh", "-c", "--" ]*/}}
+{{/*          args: [ "while true; do sleep 30; done;" ]*/}}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
@@ -42,12 +50,12 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
-              port: http
+              path: /posts
+              port: {{ .Values.service.port }}
           readinessProbe:
             httpGet:
-              path: /
-              port: http
+              path: /posts
+              port: {{ .Values.service.port }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
