--- a/deployment/helmcharts/fastapi/templates/service.yaml
+++ b/deployment/helmcharts/fastapi/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "fastapi.fullname" . }}
+  name: {{ include "fastapi.name" . }}
   labels:
     {{- include "fastapi.labels" . | nindent 4 }}
 spec:
