--- a/deployment/helmcharts/fastapi/values.yaml
+++ b/deployment/helmcharts/fastapi/values.yaml
@@ -5,18 +5,20 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: egolan/fastapi
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "6.0"
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+command: ["/usr/local/bin/uvicorn", "main:app", "--host", "0.0.0.0"]
+
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Automatically mount a ServiceAccount's API credentials?
   automount: true
   # Annotations to add to the service account
@@ -41,16 +43,16 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8000
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+  className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: fastapi-golan-eduard-sandbox.skycityhub.com
       paths:
         - path: /
           pathType: ImplementationSpecific
@@ -79,17 +81,16 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
+volumes:
+  - name: envars
+    configMap:
+      name: fastapi-envars
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
+volumeMounts:
+- name: envars
+  mountPath: /app/.env
+  subPath: .env
 
 nodeSelector: {}
 
