Update credentials for pgsql

--- a/deployment/helmcharts/postgresql/values.yaml
+++ b/deployment/helmcharts/postgresql/values.yaml
@@ -29,9 +29,9 @@ global:
     ##
     auth:
       postgresPassword: ""
-      username: ""
-      password: ""
-      database: ""
+      username: "fastapi"
+      password: "3FtarE9UWS"
+      database: "fastapi"
       existingSecret: ""
       secretKeys:
         adminPasswordKey: ""
