Add temporary envVars in default values

--- a/deployment/helmcharts/fastapi/secrets/secrets.yaml
+++ b/deployment/helmcharts/fastapi/secrets/secrets.yaml
@@ -1,6 +1,6 @@
 envVars:
   POSTGRESQL_ADDRRESS: "10.100.255.216"
-  POSTGRESQL_DATABASE: "fastapi"
-  POSTGRESQL_USER: "fastapi"
-  POSTGRESQL_PASSWORD: "3FtarE9UWS"
+  POSTGRESQL_DATABASE: "postgres"
+  POSTGRESQL_USER: "postgres"
+  POSTGRESQL_PASSWORD: "zlLHli8ltd"
   POSTGRESQL_PORT: "5432"
