--- a/deployment/helmcharts/fastapi/values.yaml
+++ b/deployment/helmcharts/fastapi/values.yaml
@@ -93,12 +93,12 @@ volumes:
     configMap:
       name: fastapi-envars
 
-#envVars:
-#  POSTGRESQL_ADDRRESS: "postgresql.postgresql.svc.cluster.local"
-#  POSTGRESQL_DATABASE: "postgres"
-#  POSTGRESQL_USER: "postgres"
-#  POSTGRESQL_PASSWORD: "0qzvp83y1L"
-#  POSTGRESQL_PORT: "5432"
+envVars:
+  POSTGRESQL_ADDRRESS: "postgresql.postgresql.svc.cluster.local"
+  POSTGRESQL_DATABASE: "postgres"
+  POSTGRESQL_USER: "postgres"
+  POSTGRESQL_PASSWORD: "0qzvp83y1L"
+  POSTGRESQL_PORT: "5432"
 
 # Additional volumeMounts on the output Deployment definition.
 volumeMounts:
