--- a/deployment/argocd_repo_server_bkp.yaml
+++ b/deployment/argocd_repo_server_bkp.yaml
@@ -1,31 +1,36 @@
-#...
-   containers :
-    -  command :
-       -  /var/run/argocd/argocd-cmp-server
-       image :  egolan/argocd:argo-plugin-v1
-       imagePullPolicy :  Always
-       name :  sops-plugin
-       resources : {}
-       securityContext :
-         runAsNonRoot :  true
-         runAsUser :  999
-       terminationMessagePath :  /dev/termination-log
-       terminationMessagePolicy :  File
-       volumeMounts :
-        -  mountPath :  /var/run/argocd
-           name :  var-files
-        -  mountPath :  /home/argocd/cmp-server/plugins
-           name :  plugins
-        -  mountPath :  /home/argocd/cmp-server/config/plugin.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: argocd-repo-server
+spec:
+  template:
+    spec:
+     containers :
+      -  command :
+         -  /var/run/argocd/argocd-cmp-server
+         image :  egolan/argocd:argo-plugin-v1
+         imagePullPolicy :  Always
+         name :  sops-plugin
+         resources : {}
+         securityContext :
+           runAsNonRoot :  true
+           runAsUser :  999
+         terminationMessagePath :  /dev/termination-log
+         terminationMessagePolicy :  File
+         volumeMounts :
+          -  mountPath :  /var/run/argocd
+             name :  var-files
+          -  mountPath :  /home/argocd/cmp-server/plugins
+             name :  plugins
+          -  mountPath :  /home/argocd/cmp-server/config/plugin.yaml
+             name :  sops-plugin-config
+             subPath :  plugin.yaml
+          -  mountPath :  /tmp
+             name :  cmp-tmp
+     volumes :
+      -  configMap :
+           defaultMode :  420
            name :  sops-plugin-config
-           subPath :  plugin.yaml
-        -  mountPath :  /tmp
-           name :  cmp-tmp
-   volumes :
-    -  configMap :
-         defaultMode :  420
          name :  sops-plugin-config
-       name :  sops-plugin-config
-    -  emptyDir : {}
-       name :  cmp-tmp
-#...
+      -  emptyDir : {}
+         name :  cmp-tmp
