--- a/deployment/argocd_plugin.yaml
+++ b/deployment/argocd_plugin.yaml
@@ -14,6 +14,6 @@ data:
       init:
         command: [sh, -c, 'echo "Initializing Plugin SOPS"']
       generate:
-        command: [sh, -c, 'helm template ${ARGOCD_ENV_ARGOCD_APP_NAME} . --set image.repository=${ARGOCD_ENV_DOCKER_IMAGE_REGISTRY} --set image.tag=${ARGOCD_ENV_DOCKER_IMAGE_TAG}']
+        command: [ sh, -c, "bash ./decrypt_sops_secrets.sh && helm template ${ARGOCD_ENV_ARGOCD_APP_NAME} . --set image.repository=${ARGOCD_ENV_DOCKER_IMAGE_REGISTRY} --set image.tag=${ARGOCD_ENV_DOCKER_IMAGE_TAG} -f secrets/development/secrets.decrypted.yaml "  ]
       discover:
         fileName: "./values.yaml"
