--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,6 @@ deploy:
       - main
   script:
     - *argocd
-    - argocd app set ${ARGOCD_APP_NAME} --plugin-env ARGOCD_APP_NAME=${ARGOCD_APP_NAME} --plugin-env DOCKER_IMAGE_REGISTRY=${DOCKER_IMAGE_REGISTRY} --plugin-env DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}
+    - argocd app set ${ARGOCD_APP_NAME} --plugin-env ARGOCD_APP_NAME=${ARGOCD_APP_NAME} --plugin-env ENVIRONMENT=${ENVIRONMENT} --plugin-env DOCKER_IMAGE_REGISTRY=${DOCKER_IMAGE_REGISTRY} --plugin-env DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}
     - argocd app sync --timeout ${TIMEOUT_SYNC} ${ARGOCD_APP_NAME}
     - argocd app wait ${ARGOCD_APP_NAME}
