--- a/deployment/helmcharts/fastapi/secrets/development/secrets.yaml
+++ b/deployment/helmcharts/fastapi/secrets/development/secrets.yaml
@@ -1,21 +1,20 @@
 envVars:
-    POSTGRESQL_ADDRRESS: ENC[AES256_GCM,data:14evxUstsZJn0a9Tzg30ej/tjzekjXKNjLeQE5eb2yR0pSmd2iIr,iv:CYPTDtM0mx6pzPDPQBeN5lBunSQUheZI5rRL6IajY9U=,tag:2vroFP6FvqxDe91ceMkK2g==,type:str]
-    POSTGRESQL_DATABASE: ENC[AES256_GCM,data:b92Y4m+0fw==,iv:zm6RLNj83aaCp5PrK6wx7UVOV+vcyv+rHaNSr3gBAq8=,tag:vpPiiceGX5DS3avBk4OIug==,type:str]
-    POSTGRESQL_USER: ENC[AES256_GCM,data:loO0oR0QlvI=,iv:scr2NlmjFfkT0zhM63zamsY4tqgxLXKs2vMksdPdnag=,tag:p9vl2ln9n1rchx2aacLX9w==,type:str]
-    POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:IUw4CnlODMaoqA==,iv:sECVdvZVaK7PPUN8asTjbkMlcaa5bOt41RkD5OODjNQ=,tag:lKEod4sTe/cZ5ET7jUQRMw==,type:str]
-    POSTGRESQL_PORT: ENC[AES256_GCM,data:Fckpkg==,iv:6U3Ro3JeQmQZGyw1VbUcEv7SjX4AT5+DfsJXihBEQSM=,tag:wZ5QiT6Iowt3RLkXWs0n6w==,type:str]
+    POSTGRESQL_ADDRRESS: ENC[AES256_GCM,data:OzGSDg==,iv:0mw6S7gxta8pyFVRI+KFc9xhD7LrmuueEr+oAjkWHNk=,tag:1KwUGKjT855l+5C1ex86yw==,type:str]
+    POSTGRESQL_DATABASE: ENC[AES256_GCM,data:/aNmJw==,iv:aYbGqwQplHd/0onC03G+gmiXE+bIt+PmuEEUVffKMok=,tag:U9nyJIOrwPDHxBKti7sONQ==,type:str]
+    POSTGRESQL_USER: ENC[AES256_GCM,data:vAHB3w==,iv:T19o2le2lHlBpO9Vknpr8ziB0+mb0awHGpmOtt8YGFg=,tag:r4ovyYRn0IFaqAwHGalaoA==,type:str]
+    POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:9E813g==,iv:TgZUEd+W4TmK2FGZ24oZKVrYqe9jAnykTLqSfWdqrSA=,tag:Ufq4ie4fUGg8MZedV1OI9A==,type:str]
+    POSTGRESQL_PORT: ENC[AES256_GCM,data:0wDv,iv:vnEyoXmV6Xd9h+YBnZEBbNR4UB1cqv+n6o5HgJ+4a+8=,tag:tF/b0ck0CbAWuauv+h6xfQ==,type:int]
 sops:
-    kms:
-        - arn: arn:aws:kms:eu-central-1:209591221760:key/6c7d633f-e5b0-4c88-a72a-ee864caeb5f3
-          created_at: "2024-01-14T13:44:54Z"
-          enc: AQICAHgr3pAoWLfn+IqiF+8InHurzraIHyS4pwO6v2BVcIpx8wHzc23wotiffogzn3FTc3yIAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMTdJ+fV2dfim8lGwFAgEQgDtfEGV0tv2KWNjN4gOBuZd0gjHLHyW5uKsVxU/3ZGfPl3AqukggXU8TZEsvbGhUW0ejD4pPk4Bm50/9Fw==
-          aws_profile: ""
-    gcp_kms: []
+    kms: []
+    gcp_kms:
+        - resource_id: projects/watchful-idea-411917/locations/global/keyRings/sops/cryptoKeys/sops-key
+          created_at: "2024-01-31T21:57:31Z"
+          enc: CiQAAk4W7FkBU5+gZzSqG6gfbfVltlJzgpX2SGRhxXdz6TVXFJcSSQCcvRuQRExt8EMHJ8KcCNnCqbpWq9ETk9wIpNw7hxIUa8Pinz1OdOcjqlnJANYmEGgK71srjKR8vlE0LcZznipar3r9fHiDMt4=
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-01-14T13:44:54Z"
-    mac: ENC[AES256_GCM,data:1dnSRumnjUSe40EoR8iOjujK3kGVjGVYQh46jbwUoEYEHUuL30x/HmKom2YMlKTyIMWH6c9t1gELiNP3DHaIYBxc6JwxvxlDl21f/u93yKzNtNHFMMt6D3cqGEyCREqEm2w44s/aOkEKnJOUF0ISBJZTh0keQieXN8DG/bdZ3MI=,iv:I4MnMvotou/5LQfGKURty4izsH6US3nyWDkaGnPKXc0=,tag:qFo12z5UEPE1aEsGmSFl6g==,type:str]
+    lastmodified: "2024-01-31T21:57:31Z"
+    mac: ENC[AES256_GCM,data:dp1LDaW28gT55YgW6tqd6KoKtu1rvX5tFNV6+IiyxjYZ2Ldbjh5fXUBn+TGcxhXvw249DaixYJ2ezqa39TEeoKU57ee5EKpiHU6jHeXGDfiJ26Jm2GHYT1lddaOkq53FSF5vJi8nuTOLWox1EZn37lse1yJbSwL3zf/Ek/GPqBA=,iv:1iJa6czpLMR2/J03SyJnhNHJtRM0nauYFUEhXO7hBTQ=,tag:DrWkUUvB93U/4F5HS8JjqQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
