Update postgresql credential

--- a/deployment/helmcharts/fastapi/secrets/development/secrets.yaml
+++ b/deployment/helmcharts/fastapi/secrets/development/secrets.yaml
@@ -1,9 +1,9 @@
 envVars:
-    POSTGRESQL_ADDRRESS: ENC[AES256_GCM,data:OzGSDg==,iv:0mw6S7gxta8pyFVRI+KFc9xhD7LrmuueEr+oAjkWHNk=,tag:1KwUGKjT855l+5C1ex86yw==,type:str]
-    POSTGRESQL_DATABASE: ENC[AES256_GCM,data:/aNmJw==,iv:aYbGqwQplHd/0onC03G+gmiXE+bIt+PmuEEUVffKMok=,tag:U9nyJIOrwPDHxBKti7sONQ==,type:str]
-    POSTGRESQL_USER: ENC[AES256_GCM,data:vAHB3w==,iv:T19o2le2lHlBpO9Vknpr8ziB0+mb0awHGpmOtt8YGFg=,tag:r4ovyYRn0IFaqAwHGalaoA==,type:str]
-    POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:9E813g==,iv:TgZUEd+W4TmK2FGZ24oZKVrYqe9jAnykTLqSfWdqrSA=,tag:Ufq4ie4fUGg8MZedV1OI9A==,type:str]
-    POSTGRESQL_PORT: ENC[AES256_GCM,data:0wDv,iv:vnEyoXmV6Xd9h+YBnZEBbNR4UB1cqv+n6o5HgJ+4a+8=,tag:tF/b0ck0CbAWuauv+h6xfQ==,type:int]
+    POSTGRESQL_ADDRRESS: ENC[AES256_GCM,data:zYxzsuLlcPlpGOMV7rVMPErpg9rZK2fPhv+MdeswzF/opp2evQA8,iv:25hL3MpaUxsPxH+71kl4YH4XAtLFcutiZ6NGwhLFvro=,tag:pPyZUJIQA93GgNVbqF8IqA==,type:str]
+    POSTGRESQL_DATABASE: ENC[AES256_GCM,data:pCZqVpQSVCE=,iv:nN2re0in2SI5JjM6AgQT36KGqkyjfiqJ4pyuFmAAqWM=,tag:XALZ/OWPXbqIcwdzCe0Rkg==,type:str]
+    POSTGRESQL_USER: ENC[AES256_GCM,data:Y/qM6UCvXYs=,iv:9FFLRf+U1z9GgIqm4WOlMvlmcH4JENy43/cUXOyIfkk=,tag:HIJ6gmkw6UMYDKrm7CqG7g==,type:str]
+    POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:Mnhg7Y9uECABjQ==,iv:v9j3deaw6OoAFRS0a28CtjwNEBXeHW3m9EMiTQ2vH58=,tag:S2uIsSoTD1yQkd3fojHehA==,type:str]
+    POSTGRESQL_PORT: ENC[AES256_GCM,data:O90s0A==,iv:dXFp4lqiPedieAnawL5tODXr2p5FS1wK+1QjpbAhh3w=,tag:C10dG3PKVRYhfnlj5ehwwQ==,type:int]
 sops:
     kms: []
     gcp_kms:
@@ -13,8 +13,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-01-31T21:57:31Z"
-    mac: ENC[AES256_GCM,data:dp1LDaW28gT55YgW6tqd6KoKtu1rvX5tFNV6+IiyxjYZ2Ldbjh5fXUBn+TGcxhXvw249DaixYJ2ezqa39TEeoKU57ee5EKpiHU6jHeXGDfiJ26Jm2GHYT1lddaOkq53FSF5vJi8nuTOLWox1EZn37lse1yJbSwL3zf/Ek/GPqBA=,iv:1iJa6czpLMR2/J03SyJnhNHJtRM0nauYFUEhXO7hBTQ=,tag:DrWkUUvB93U/4F5HS8JjqQ==,type:str]
+    lastmodified: "2024-01-31T23:19:33Z"
+    mac: ENC[AES256_GCM,data:sULtZxcUMTzFmwcUDSkqVkcE75wuZ1+DKoftCUzS42w+hqwadQ5jaX4i//Gci6PB9mU6VyaGGJGYAzMIIYL3cGAk92gTlrMNqZJJqheLmBc/EPrTE5TCeMYSIHyWWpP+PhtuoYp4ZvAPUVeKKVoH6bn84MnPv1Af6jBwoIFN34A=,iv:MUZFod3cWfYPsVC6nM0cVa8eZXvVHxqoque15fhTTxQ=,tag:L0bKvN30J459RpotzxUxgA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
