--- a/deployment/helmcharts/fastapi/secrets/development/secrets.yaml
+++ b/deployment/helmcharts/fastapi/secrets/development/secrets.yaml
@@ -1,6 +1,20 @@
 envVars:
-  POSTGRESQL_ADDRRESS: "postgresql.postgresql-test.svc.cluster.local"
-  POSTGRESQL_DATABASE: "postgres"
-  POSTGRESQL_USER: "postgres"
-  POSTGRESQL_PASSWORD: "2aOIvQBjJH"
-  POSTGRESQL_PORT: "5432"
+    POSTGRESQL_ADDRRESS: ENC[AES256_GCM,data:Jp8vvad/M0lXIZfUNqmaDkM6vED7qoqpS7k6ncUjpz5//2i43H+E,iv:N0TEUnoSVFi0yD/FmMyM6rIJ10lnVuNRwp+ln8wq/JY=,tag:XKM1P9uh5g9KdfnbTee4zQ==,type:str]
+    POSTGRESQL_DATABASE: ENC[AES256_GCM,data:fk/rm5byK7g=,iv:ypburnOAludMZ1xM1Sxu8yxPE3FzvAj2CWjaBr+GKe4=,tag:eXHZk7QbnJNd+h1zEyK6Kw==,type:str]
+    POSTGRESQL_USER: ENC[AES256_GCM,data:TgTKTrusyIY=,iv:e2K2/PasZEenVEq/W2kIbtEoJZu0A9sbvd9U47geNOg=,tag:TqPK1OkdxjHggUziXd+dLA==,type:str]
+    POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:ISS4lEtLlHOXMg==,iv:jEZ4J2Xe1Y4yo7aua0CcuhcKUzW3qalbiyV3HDFBWOA=,tag:3GP/89ZynKRAP+cF1fNa9Q==,type:str]
+    POSTGRESQL_PORT: ENC[AES256_GCM,data:8R3PBg==,iv:rtWmm6m6XqbVlTWzWPtoDfx+cB6RwDmoFUEY88Bh9yw=,tag:mM1d0TwCgf0Y8VvJOTA3OQ==,type:str]
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/watchful-idea-411917/locations/global/keyRings/sopsv1/cryptoKeys/sops-keyv1
+          created_at: "2024-02-06T16:59:15Z"
+          enc: CiQA9lGZpygPTeQNFAQlWo6xtb+awpphPKF/pSmNL454cJgRxAsSSQClXrHOoGKWUN3V59IWawHQfoRXKIlL18/SBv9SOMdUN9I6AvJ6ID4AUab8JTccpIjbE42i5qZly23GtxxhJlQ6yaA7oNntkXU=
+    azure_kv: []
+    hc_vault: []
+    age: []
+    lastmodified: "2024-02-06T16:59:16Z"
+    mac: ENC[AES256_GCM,data:tURF/BrYyNFJKSqdikyc/dWQ+BPStxYdj5vbNAs4MOoSI82GHDE/XtXaeVB3VFyHCzi9vk9SSPB/+u6qo4Rwh+oYmsWVZ3HWdF9wt2Rc3tYJDl+Bcw6NcBFMwNU9uiG+ryVN/L9cA3KtUi7Qg0H0zQb2A7aodDtHOTfa1x4mAKI=,iv:v1BpZAi05fYsSrPu7p9C88jpKvbou44YuDMprTA20ZM=,tag:WoaJOZrf5+WYMWPVgC8xzw==,type:str]
+    pgp: []
+    unencrypted_suffix: _unencrypted
+    version: 3.8.1
