--- a/deployment/argocd_cm_plugin_gcp.yaml
+++ b/deployment/argocd_cm_plugin_gcp.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: sops-plugin-config
-  namespace: argocd-test
+  namespace: argocd
 data:
   plugin.yaml: |
     apiVersion: argoproj.io/v1alpha1
@@ -14,6 +14,6 @@ data:
       init:
         command: [sh, -c, 'echo "Initializing Plugin SOPS"']
       generate:
-        command: [ sh, -c, "export ENVIRONMENT=${ARGOCD_ENV_ENVIRONMENT} && GOOGLE_APPLICATION_CREDENTIALS=/home/argocd/google_key/watchful-idea-411917-5a0b97b4d14f.json bash ./decrypt_sops_secrets.sh && helm template ${ARGOCD_ENV_ARGOCD_APP_NAME} . --set image.repository=${ARGOCD_ENV_DOCKER_IMAGE_REGISTRY} --set image.tag=${ARGOCD_ENV_DOCKER_IMAGE_TAG} -f secrets/${ARGOCD_ENV_ENVIRONMENT}/secrets.decrypted.yaml" ]
+        command: [ sh, -c, "export ENVIRONMENT=${ARGOCD_ENV_ENVIRONMENT} && GOOGLE_APPLICATION_CREDENTIALS=/home/argocd/google_key/watchful-idea-411917-8c746fa6d472.json bash ./decrypt_sops_secrets.sh && helm template ${ARGOCD_ENV_ARGOCD_APP_NAME} . --set image.repository=${ARGOCD_ENV_DOCKER_IMAGE_REGISTRY} --set image.tag=${ARGOCD_ENV_DOCKER_IMAGE_TAG} -f secrets/${ARGOCD_ENV_ENVIRONMENT}/secrets.decrypted.yaml" ]
       discover:
         fileName: "./values.yaml"
