--- a/deployment/argocd_ingress.yaml
+++ b/deployment/argocd_ingress.yaml
@@ -2,11 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argocd-server
-  namespace: argocd-test
+  namespace: argocd
 spec:
   ingressClassName: "nginx"
   rules:
-  - host: argocd-test.cicd.website
+  - host: argocd.cicd.website
     http:
       paths:
       - path: /
