--- a/deployment/helmcharts/fastapi/values.yaml
+++ b/deployment/helmcharts/fastapi/values.yaml
@@ -59,7 +59,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: fastapi-golan-eduard-sandbox.skycityhub.com
+    - host: fastapi.cicd.website
       paths:
         - path: /
           pathType: ImplementationSpecific
