--- a/deployment/helmcharts/fastapi/templates/configMap.yaml
+++ b/deployment/helmcharts/fastapi/templates/configMap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "fastapi.name" . }}-envars
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "fastapi.labels" . | nindent 4 }}
 data:
