--- a/deployment/helmcharts/fastapi/templates/deployment.yaml
+++ b/deployment/helmcharts/fastapi/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "fastapi.name" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "fastapi.labels" . | nindent 4 }}
 spec:
