--- a/deployment/helmcharts/fastapi/values.yaml
+++ b/deployment/helmcharts/fastapi/values.yaml
@@ -10,6 +10,8 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
+namespace: default
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
