--- a/deployment/argocd_configurations/argocd_ingress.yaml
+++ b/deployment/argocd_configurations/argocd_ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: "nginx"
   rules:
-  - host: argocd.cicd.website
+  - host: argocd.domain.com
     http:
       paths:
       - path: /
