--- a/deployment/argocd_configurations/argocd_repo_server_gcp.yaml
+++ b/deployment/argocd_configurations/argocd_repo_server_gcp.yaml
@@ -9,7 +9,7 @@ spec:
      containers:
      - name: sops-plugin
        command: [/var/run/argocd/argocd-cmp-server] # Entrypoint should be Argo CD lightweight CMP server i.e. argocd-cmp-server
-       image: egolan/argocd:argo-plugin # This can be off-the-shelf or custom-built image
+       image: <image:tag> # This can be off-the-shelf or custom-built image
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
